--- a/Code/Code1.rmd
+++ b/Code/Code1.rmd
@@ -84,6 +84,7 @@ map+
 geom_point(aes(x=lon, y=lat, size=(count), colour = (count)), data=ActiveBusiness1, alpha=.5)+
 scale_colour_gradient(low="grey", high="red")
 ```
+![picture alt]()
 
 #plot less granular map
 ```{r plot2}
